--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "storybook": "NODE_PATH=src start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "NODE_PATH=src build-storybook -c .storybook -o .out"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.21.0",
     "@storybook/addon-info": "^3.2.9",
+    "@storybook/addon-knobs": "^3.2.8",
     "@storybook/addon-options": "^3.2.6",
     "@storybook/react": "^3.2.8",
     "i": "^0.3.5"
