--- a/package.json
+++ b/package.json
@@ -4,26 +4,48 @@
   "private": true,
   "dependencies": {
     "@storybook/addon-backgrounds": "^3.0.0",
-    "@storybook/react": "^3.2.8",
     "aphrodite": "^1.2.3",
+    "classnames": "^2.2.5",
+    "object-assign": "^4.1.0",
+    "prop-types": "^15.5.10",
+    "rambda": "^0.9.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13",
-    "storybook-addon-a11y": "3.0.0"
+    "react-slick": "0.14.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "storybook": "NODE_PATH=src start-storybook -p 6006",
-    "build-storybook": "NODE_PATH=src build-storybook -c .storybook -o .out"
+    "build-storybook": "NODE_PATH=src build-storybook",
+    "gh-pages": "npm run build-storybook -- -o _gh-pages && gh-pages -d _gh-pages",
+    "storybook": "NODE_PATH=src start-storybook -p 6006"
+  },
+  "peerDependencies": {
+    "react": "^15.0.0"
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.21.0",
-    "@storybook/addon-info": "^3.2.9",
-    "@storybook/addon-knobs": "^3.2.8",
-    "@storybook/addon-options": "^3.2.6",
-    "@storybook/react": "^3.2.8",
-    "i": "^0.3.5"
+    "@storybook/addon-backgrounds": "^3.0.0",
+    "@storybook/addon-info": "^3.2.11",
+    "@storybook/addon-knobs": "^3.2.10",
+    "@storybook/addon-links": "^3.2.10",
+    "@storybook/addon-options": "^3.2.10",
+    "@storybook/react": "^3.2.11",
+    "babel-cli": "^6.14.0",
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.13.0",
+    "babel-register": "^6.14.0",
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
+    "gh-pages": "^1.0.0",
+    "mocha": "^3.0.2",
+    "pre-commit": "^1.2.2",
+    "react-addons-shallow-compare": "^15.0.2",
+    "sinon": "^1.17.6",
+    "standard-version": "^4.0.0",
+    "storybook-addon-a11y": "^3.0.0"
   }
 }
