--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
-image: alpine:latest
-pages:
-  stage: deploy
-  script:
-  - echo 'Nothing to do...'
-  artifacts:
-    paths:
-    - public
-  only:
-  - gh-pages
+script:
+  - npm install
+  - npm run gl-pages
+cache:
+  paths:
+    - node_modules/
+artifacts:
+  paths:
+    - build/
+  expire_in: 1 hour
