--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build-storybook": "NODE_PATH=src build-storybook",
-    "gh-pages": "npm run build-storybook -- -o _gh-pages && gh-pages -d _gh-pages",
+    "gh-pages": "npm run build-storybook -- -o _gh-pages && gh-pages -d _gh-pages && rm -rf _gh-pages",
     "storybook": "NODE_PATH=src start-storybook -p 6006"
   },
   "peerDependencies": {
@@ -40,7 +40,7 @@
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0",
-    "gh-pages": "^1.0.0",
+    "gh-pages": "^0.12.0",
     "mocha": "^3.0.2",
     "pre-commit": "^1.2.2",
     "react-addons-shallow-compare": "^15.0.2",
