--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
-script:
-  - npm install
-  - npm run gl-pages
-cache:
-  paths:
-    - node_modules/
-artifacts:
-  paths:
-    - build/
-  expire_in: 1 hour
+pages:
+    script:
+      - npm install
+      - npm run gl-pages
+    cache:
+      paths:
+        - node_modules/
+    artifacts:
+      paths:
+        - build/
+      expire_in: 1 hour
