--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build-storybook": "NODE_PATH=src build-storybook",
-    "gh-pages": "npm run build-storybook -- -o _gh-pages && gh-pages -d _gh-pages && rm -rf _gh-pages",
+    "gl-pages": "npm run build-storybook -- -o build",
     "storybook": "NODE_PATH=src start-storybook -p 6006"
   },
   "peerDependencies": {
