--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
     "react/forbid-prop-types": [2],
     "react/no-danger": [0],
     "react/no-unused-prop-types": [2, { skipShapeProps: true }],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "jsx-a11y/no-static-element-interactions": [1]
   },
   "plugins": [
