--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "da-dobsonville",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/components/index.js",
   "dependencies": {
     "@storybook/addon-backgrounds": "^3.0.0",
     "aphrodite": "^1.2.3",
@@ -31,6 +32,8 @@
     "@storybook/react": "^3.2.11",
     "babel-cli": "^6.14.0",
     "babel-eslint": "^6.1.2",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
