--- a/package.json
+++ b/package.json
@@ -3,14 +3,8 @@
   "version": "0.4.0",
   "main": "dist/components/index.js",
   "dependencies": {
-    "@storybook/addon-backgrounds": "^3.0.0",
-    "aphrodite": "^1.2.3",
-    "classnames": "^2.2.5",
-    "object-assign": "^4.1.0",
+    "cross-env": "^5.1.1",
     "prop-types": "^15.5.10",
-    "rambda": "^0.9.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "react-media": "^1.6.1",
     "react-slick": "0.14.4"
   },
@@ -18,10 +12,11 @@
     "build-storybook": "NODE_PATH=src build-storybook",
     "gh-pages": "npm run build-storybook -- -o _gh-pages && gh-pages -d _gh-pages && rm -rf _gh-pages",
     "storybook": "NODE_PATH=src start-storybook -p 6006",
-    "build-watch": "NODE_PATH=src/ babel src --out-dir ./dist --watch --source-maps --copy-files"
+    "build-watch": "NODE_PATH=src/ cross-env BABEL_ENV=commonjs babel src --out-dir ./dist --watch --source-maps --copy-files"
   },
   "peerDependencies": {
-    "react": "^15.0.0"
+    "aphrodite": "^1.2.5",
+    "react": "^15.6.1 || ^16.0.0"
   },
   "devDependencies": {
     "@storybook/addon-backgrounds": "^3.0.0",
@@ -30,6 +25,7 @@
     "@storybook/addon-links": "^3.2.10",
     "@storybook/addon-options": "^3.2.10",
     "@storybook/react": "^3.2.11",
+    "aphrodite": "^1.2.5",
     "babel-cli": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-plugin-module-resolver": "^2.7.1",
@@ -39,6 +35,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.13.0",
     "babel-register": "^6.14.0",
+    "classnames": "^2.2.5",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.1.0",
     "eslint-plugin-import": "^1.15.0",
@@ -46,8 +43,12 @@
     "eslint-plugin-react": "^6.3.0",
     "gh-pages": "^0.12.0",
     "mocha": "^3.0.2",
+    "object-assign": "^4.1.0",
     "pre-commit": "^1.2.2",
+    "rambda": "^0.9.2",
+    "react": "^15.6.1",
     "react-addons-shallow-compare": "^15.0.2",
+    "react-dom": "^15.6.1",
     "sinon": "^1.17.6",
     "standard-version": "^4.0.0",
     "storybook-addon-a11y": "^3.0.0",
