--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cross-env": "^5.1.3",
     "prop-types": "^15.5.10",
+    "ramda": "^0.25.0",
     "react-media": "^1.6.1",
     "react-slick": "0.14.4"
   },
@@ -47,7 +48,6 @@
     "mocha": "^3.0.2",
     "object-assign": "^4.1.0",
     "pre-commit": "^1.2.2",
-    "rambda": "^0.9.2",
     "react": "^15.6.1",
     "react-addons-shallow-compare": "^15.0.2",
     "react-dom": "^15.6.1",
