--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "storybook": "NODE_PATH=src start-storybook -p 6006",
     "build-watch": "NODE_PATH=src/ cross-env BABEL_ENV=commonjs babel src --out-dir ./dist --watch --source-maps --copy-files",
     "build": "NODE_PATH=src/ cross-env BABEL_ENV=commonjs babel src --out-dir ./dist --source-maps --copy-files",
-    "deploy": "yarn build && npm version patch"
+    "deploy": "yarn build && npm version patch",
+    "chromatic": "chromatic test --storybook-addon  --do-not-start"
   },
   "peerDependencies": {
     "aphrodite": "^1.2.5",
@@ -50,6 +51,7 @@
     "pre-commit": "^1.2.2",
     "react": "^15.6.1",
     "react-addons-shallow-compare": "^15.0.2",
+    "react-chromatic": "^0.7.9",
     "react-dom": "^15.6.1",
     "sinon": "^1.17.6",
     "standard-version": "^4.0.0",
