--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "version": "0.8.50",
   "main": "dist/components/index.js",
   "dependencies": {
-    "cross-env": "^5.1.3",
     "prop-types": "^15.5.10",
-    "ramda": "^0.25.0",
-    "react-media": "^1.6.1",
-    "react-slick": "0.14.4"
+    "ramda": "^0.25.0"
   },
   "scripts": {
     "build-storybook": "NODE_PATH=src build-storybook",
@@ -19,7 +16,6 @@
     "chromatic": "chromatic test --storybook-addon  --do-not-start"
   },
   "peerDependencies": {
-    "aphrodite": "^1.2.5",
     "react": "^15.6.1 || ^16.0.0"
   },
   "devDependencies": {
@@ -40,6 +36,7 @@
     "babel-preset-stage-1": "^6.13.0",
     "babel-register": "^6.14.0",
     "classnames": "^2.2.5",
+    "cross-env": "^5.1.3",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.1.0",
     "eslint-plugin-import": "^1.15.0",
@@ -53,6 +50,8 @@
     "react-addons-shallow-compare": "^15.0.2",
     "react-chromatic": "^0.7.9",
     "react-dom": "^15.6.1",
+    "react-media": "^1.6.1",
+    "react-slick": "0.14.4",
     "sinon": "^1.17.6",
     "standard-version": "^4.0.0",
     "storybook-addon-a11y": "^3.0.0",
