--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lucio-erasmus/da-dobsonville",
   "version": "0.8.49",
-  "main": "dist/components/index.js",
+  "main": "dist",
   "dependencies": {
     "cross-env": "^5.1.3",
     "prop-types": "^15.5.10",
