--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@lucio-erasmus/da-dobsonville",
   "version": "0.8.69",
-  "main": "dist/components/index.js",
+  "main": "build/index.js",
   "dependencies": {
     "prop-types": "^15.5.10",
-    "ramda": "^0.25.0"
+    "ramda": "^0.25.0",
+    "react-media": "^1.6.1",
+    "react-slick": "0.14.4"
   },
   "scripts": {
     "build-storybook": "NODE_PATH=src build-storybook",
@@ -16,7 +18,8 @@
     "chromatic": "chromatic test --storybook-addon  --do-not-start"
   },
   "peerDependencies": {
-    "react": "^15.6.1 || ^16.0.0"
+    "react": "^15.6.1 || ^16.0.0",
+    "aphrodite": "^1.2.5"
   },
   "devDependencies": {
     "@storybook/addon-backgrounds": "^3.0.0",
@@ -25,7 +28,6 @@
     "@storybook/addon-links": "^3.2.10",
     "@storybook/addon-options": "^3.2.10",
     "@storybook/react": "^3.2.11",
-    "aphrodite": "^1.2.5",
     "babel-cli": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-plugin-module-resolver": "^2.7.1",
@@ -50,8 +52,6 @@
     "react-addons-shallow-compare": "^15.0.2",
     "react-chromatic": "^0.7.9",
     "react-dom": "^15.6.1",
-    "react-media": "^1.6.1",
-    "react-slick": "0.14.4",
     "sinon": "^1.17.6",
     "standard-version": "^4.0.0",
     "storybook-addon-a11y": "^3.0.0",
