--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build-watch": "NODE_PATH=src/ cross-env BABEL_ENV=commonjs babel src --out-dir ./dist --watch --source-maps --copy-files",
     "build": "NODE_PATH=src/ cross-env BABEL_ENV=commonjs babel src --out-dir ./dist --source-maps --copy-files",
     "deploy": "yarn build && npm version patch",
-    "chromatic": "chromatic test --storybook-addon  --do-not-start"
+    "chromatic": "chromatic test --storybook-addon  --do-not-start",
+    "postversion": "git push --follow-tags"
   },
   "peerDependencies": {
     "aphrodite": "^1.2.5",
